# SEIT-Hackathon

./: .gitignore  README.md  api.py  decision_tree_predict.py  protobuf_to_json.py  requirements.txt  train_decision_tree.py
app/: Dockerfile  decision_tree_predict.py  pyproject.toml  requirements.txt
app/app/: main.py
data/: stops.txt
data_creation/: create_dataset_scan.py
data_creation/notebooks/: Dataset_Creation.ipynb  ML_Models_Tests.ipynb  combine_datasets.ipynb
hackathon_project/: .gitignore  README.md  pyproject.toml
hackathon_project/app/: decision_tree_predict.py  index.html  main.py  train_decision_tree.py
hackathon_project/app/model_weights/: scaler.pkl
model_weights/: decision_tree_model.pkl
